--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: Arial, sans-serif;
+      font-family: Calibri, sans-serif;
     }
     h1 {
       font-size: 3em;
@@ -23,6 +23,6 @@
   </style>
 </head>
 <body>
-  <h1>Website Coming Too Soon</h1>
+  <h1>COMING TOO SOON</h1>
 </body>
 </html>
