--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     #bouncer {
       position: absolute;
       color: white;
-      font-size: 5vw;
+      font-size: 3.3vw; /* desktopformaat */
       white-space: nowrap;
     }
 
     @media (max-width: 600px) {
       #bouncer {
-        font-size: 8vw;
+        font-size: 3.5vw; /* veel kleiner op gsm */
       }
     }
   </style>
@@ -36,31 +36,25 @@
     let dx = 2;
     let dy = 2;
 
-    function updateSizeAndStart() {
+    function animate() {
       const rect = bouncer.getBoundingClientRect();
+      const width = window.innerWidth;
+      const height = window.innerHeight;
 
-      function animate() {
-        const rect = bouncer.getBoundingClientRect();
-        const width = window.innerWidth;
-        const height = window.innerHeight;
+      if (x + rect.width >= width || x <= 0) dx = -dx;
+      if (y + rect.height >= height || y <= 0) dy = -dy;
 
-        if (x + rect.width >= width || x <= 0) dx = -dx;
-        if (y + rect.height >= height || y <= 0) dy = -dy;
+      x += dx;
+      y += dy;
 
-        x += dx;
-        y += dy;
+      bouncer.style.left = x + 'px';
+      bouncer.style.top = y + 'px';
 
-        bouncer.style.left = x + 'px';
-        bouncer.style.top = y + 'px';
-
-        requestAnimationFrame(animate);
-      }
-
-      animate();
+      requestAnimationFrame(animate);
     }
 
-    window.addEventListener("load", updateSizeAndStart);
-    window.addEventListener("resize", () => location.reload()); // herstart bij schermrotatie
+    window.addEventListener("load", animate);
+    window.addEventListener("resize", () => location.reload());
   </script>
 </body>
 </html>
