--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     @media (max-width: 600px) {
       #bouncer {
-        font-size: 5vw; /* veel kleiner op gsm */
+        font-size: 4.2vw; /* iets groter op gsm */
       }
     }
   </style>
