--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </style>
 </head>
 <body>
-  <div id="bouncer">COMING TOO SOON</div>
+  <a href="info.html" class="bouncing-text">COMING TOO SOON</a>
 
   <script>
     const bouncer = document.getElementById('bouncer');
